wip: stage executor as separate model
