# pkg/models/canvas.go
@@ -1,11 +1,14 @@
 package models
 
 import (
+	"context"
+	"errors"
 	"fmt"
 	"strings"
 	"time"
 
 	uuid "github.com/google/uuid"
+	"github.com/superplanehq/superplane/pkg/crypto"
 	"github.com/superplanehq/superplane/pkg/database"
 	"gorm.io/datatypes"
 	"gorm.io/gorm"
@@ -29,21 +32,25 @@ func (Canvas) TableName() string {
 	return "canvases"
 }
 
-// NOTE: caller must encrypt the key before calling this method.
 func (c *Canvas) CreateEventSource(name string, key []byte, resourceId *uuid.UUID) (*EventSource, error) {
+	return c.CreateEventSourceInTransaction(database.Conn(), name, key, resourceId)
+}
+
+// NOTE: caller must encrypt the key before calling this method.
+func (c *Canvas) CreateEventSourceInTransaction(tx *gorm.DB, name string, key []byte, resourceId *uuid.UUID) (*EventSource, error) {
 	now := time.Now()
 
 	eventSource := EventSource{
-		Name:                  name,
-		CanvasID:              c.ID,
-		CreatedAt:             &now,
-		UpdatedAt:             &now,
-		Key:                   key,
-		IntegrationResourceID: resourceId,
-		State:                 EventSourceStatePending,
+		Name:       name,
+		CanvasID:   c.ID,
+		CreatedAt:  &now,
+		UpdatedAt:  &now,
+		Key:        key,
+		ResourceID: resourceId,
+		State:      EventSourceStatePending,
 	}
 
-	err := database.Conn().
+	err := tx.
 		Clauses(clause.Returning{}).
 		Create(&eventSource).
 		Error
@@ -187,33 +194,32 @@ func (c *Canvas) ListConnectionGroups() ([]ConnectionGroup, error) {
 }
 
 func (c *Canvas) CreateStage(
+	encryptor crypto.Encryptor,
 	name, createdBy string,
 	conditions []StageCondition,
-	executorSpec ExecutorSpec,
+	executor StageExecutor,
+	resource *Resource,
 	connections []Connection,
 	inputs []InputDefinition,
 	inputMappings []InputMapping,
 	outputs []OutputDefinition,
 	secrets []ValueDefinition,
-) error {
+) (*Stage, error) {
 	now := time.Now()
-	ID := uuid.New()
 
-	return database.Conn().Transaction(func(tx *gorm.DB) error {
-		stage := &Stage{
-			ID:            ID,
-			CanvasID:      c.ID,
-			Name:          name,
-			Conditions:    datatypes.NewJSONSlice(conditions),
-			CreatedAt:     &now,
-			CreatedBy:     uuid.Must(uuid.Parse(createdBy)),
-			ExecutorSpec:  datatypes.NewJSONType(executorSpec),
-			Inputs:        datatypes.NewJSONSlice(inputs),
-			InputMappings: datatypes.NewJSONSlice(inputMappings),
-			Outputs:       datatypes.NewJSONSlice(outputs),
-			Secrets:       datatypes.NewJSONSlice(secrets),
-		}
+	stage := &Stage{
+		CanvasID:      c.ID,
+		Name:          name,
+		Conditions:    datatypes.NewJSONSlice(conditions),
+		CreatedAt:     &now,
+		CreatedBy:     uuid.Must(uuid.Parse(createdBy)),
+		Inputs:        datatypes.NewJSONSlice(inputs),
+		InputMappings: datatypes.NewJSONSlice(inputMappings),
+		Outputs:       datatypes.NewJSONSlice(outputs),
+		Secrets:       datatypes.NewJSONSlice(secrets),
+	}
 
+	err := database.Conn().Transaction(func(tx *gorm.DB) error {
 		err := tx.Clauses(clause.Returning{}).Create(&stage).Error
 		if err != nil {
 			if strings.Contains(err.Error(), "duplicate key value violates unique constraint") {
@@ -223,9 +229,14 @@ func (c *Canvas) CreateStage(
 			return err
 		}
 
+		err = c.createStageExecutor(tx, encryptor, stage, executor, resource)
+		if err != nil {
+			return err
+		}
+
 		for _, i := range connections {
 			c := i
-			c.TargetID = ID
+			c.TargetID = stage.ID
 			c.TargetType = ConnectionTargetTypeStage
 			err := tx.Create(&c).Error
 			if err != nil {
@@ -235,21 +246,83 @@ func (c *Canvas) CreateStage(
 
 		return nil
 	})
+
+	if err != nil {
+		return nil, err
+	}
+
+	return stage, nil
+}
+
+func (c *Canvas) createStageExecutor(tx *gorm.DB, encryptor crypto.Encryptor, stage *Stage, executor StageExecutor, resource *Resource) error {
+	now := time.Now()
+
+	//
+	// If the executor is not associated with an integration/resource,
+	// we just associate it with the stage, and return.
+	//
+	if resource == nil {
+		executor.StageID = stage.ID
+		return tx.Create(&executor).Error
+	}
+
+	//
+	// Check if there is already a resource created for this.
+	// If not, create one and attach it to a new event source.
+	//
+	r, err := FindResourceInTransaction(tx, resource.IntegrationID, resource.Type, resource.Name)
+	if err != nil {
+		if !errors.Is(err, gorm.ErrRecordNotFound) {
+			return err
+		}
+
+		r = resource
+		r.CreatedAt = &now
+		err := tx.Clauses(clause.Returning{}).Create(&r).Error
+		if err != nil {
+			return fmt.Errorf("error creating executor resource: %v", err)
+		}
+
+		_, key, err := genNewEventSourceKey(context.Background(), encryptor, resource.Name)
+		if err != nil {
+			return err
+		}
+
+		_, err = c.CreateEventSourceInTransaction(tx, r.Name, key, &r.ID)
+		if err != nil {
+			return fmt.Errorf("error creating event source for resource: %v", err)
+		}
+	}
+
+	executor.ResourceID = r.ID
+
+	//
+	// Create stage executor
+	//
+	executor.StageID = stage.ID
+	return tx.Create(&executor).Error
 }
 
 func (c *Canvas) UpdateStage(
 	id, requesterID string,
 	conditions []StageCondition,
-	executorSpec ExecutorSpec,
+	executor StageExecutor,
+	resource *Resource,
 	connections []Connection,
 	inputs []InputDefinition,
 	inputMappings []InputMapping,
 	outputs []OutputDefinition,
 	secrets []ValueDefinition,
 ) error {
+	now := time.Now()
+
 	return database.Conn().Transaction(func(tx *gorm.DB) error {
 		if err := tx.Where("target_id = ?", id).Delete(&Connection{}).Error; err != nil {
 			return fmt.Errorf("failed to delete existing connections: %v", err)
+		}
+
+		if err := tx.Where("stage_id = ?", id).Delete(&StageExecutor{}).Error; err != nil {
+			return fmt.Errorf("failed to delete existing executor: %v", err)
 		}
 
 		for _, connection := range connections {
@@ -260,12 +333,27 @@ func (c *Canvas) UpdateStage(
 			}
 		}
 
+		if resource != nil {
+			resource.CreatedAt = &now
+			err := tx.Clauses(clause.Returning{}).Create(&resource).Error
+			if err != nil {
+				return fmt.Errorf("error creating executor resource: %v", err)
+			}
+
+			executor.ResourceID = resource.ID
+		}
+
+		executor.StageID = uuid.MustParse(id)
+		err := tx.Create(&executor).Error
+		if err != nil {
+			return err
+		}
+
 		now := time.Now()
-		err := tx.Model(&Stage{}).
+		err = tx.Model(&Stage{}).
 			Where("id = ?", id).
 			Update("updated_at", now).
 			Update("updated_by", requesterID).
-			Update("executor_spec", datatypes.NewJSONType(executorSpec)).
 			Update("conditions", datatypes.NewJSONSlice(conditions)).
 			Update("inputs", datatypes.NewJSONSlice(inputs)).
 			Update("input_mappings", datatypes.NewJSONSlice(inputMappings)).
@@ -274,7 +362,7 @@ func (c *Canvas) UpdateStage(
 			Error
 
 		if err != nil {
-			return fmt.Errorf("failed to update stage timestamp: %v", err)
+			return fmt.Errorf("failed to update stage: %v", err)
 		}
 
 		return nil
@@ -381,4 +469,14 @@ func CreateCanvas(requesterID uuid.UUID, orgID uuid.UUID, name string) (*Canvas,
 	}
 
 	return nil, err
+}
+
+func genNewEventSourceKey(ctx context.Context, encryptor crypto.Encryptor, name string) (string, []byte, error) {
+	plainKey, _ := crypto.Base64String(32)
+	encrypted, err := encryptor.Encrypt(ctx, []byte(plainKey), []byte(name))
+	if err != nil {
+		return "", nil, err
+	}
+
+	return plainKey, encrypted, nil
 }
